--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "25-Ins_Mongoose-CRUD",
+  "name": "25-ins_mongoose-crud",
   "version": "1.0.1",
   "description": "Instructor demo for CRUD operations in Mongoose on subdocuments",
   "main": "index.js",
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "inquirer": "^9.2.11",
     "moment": "^2.29.4",
     "mongoose": "^7.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
-  }
+  },
+  "keywords": [],
+  "author": ""
 }
